--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,44 @@
 
 _.*
 settings.json
+
+
+
+
+.sass-cache
+.project
+_.*
+.DS_Store
+Thumbs.db
+.settings
+/.gitmodules
+.tmp
+.idea
+OLD*
+node_modules
+bower_components
+*.log
+.map
+angular.min.js
+jquery.js
+
+# dependencies
+/node_modules
+*/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
