Update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,18 @@
 
 _.*
 settings.json
+
+.sass-cache
+.project
+_.*
+.DS_Store
+Thumbs.db
+.settings
+/.gitmodules
+.tmp
+.idea
+OLD*
+node_modules
+bower_components
+*.log
+.map
